@@ -23,6 +23,9 @@ Post-v2.17.0
          OpenFlow versions 1.0-1.2 with Nicira Extensions
          OpenFlow versions 1.3 with Open Network Foundation extension
          OpenFlow versions 1.4+, as defined in the OpenFlow specification
+   - IPsec:
+     * Added support for custom per-tunnel options via 'options:ipsec_*' knobs.
+       See Documentation/tutorials/ipsec.rst for details.
    - Windows:
      * Conntrack support for TCPv6, UDPv6, ICMPv6, FTPv6.
      * IPv6 Geneve tunnel support.
